--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <!-- GIS Script para Login Social (OK) -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- CORREÇÃO: Usando o caminho relativo direto -->
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
